--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -8,26 +8,6 @@
     </div>
 
 </div>
-
-<!--
-<div th:fragment="header-user-page">
-
-  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-nornal">Ваш аккаунт</h5>
-      <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/">Главная страница</a>
-        <a class="p-2 text-dark">Опросники</a>
-        <a class="p-2 text-dark">Лекарства</a>
-        <a class="p-2 text-dark">Статистика</a>
-        <a class="p-2 text-dark">Личные данные</a>
-        <form th:action="@{/logout}" th:method="POST">
-          <input class="btn btn-primary" type="submit" value="Выход"/>
-        </form>
-      </nav>
-  </div>
-
-</div>
--->
  
 <div th:fragment="header-user-page">
 
@@ -60,7 +40,8 @@
       <div class="collapse navbar-collapse d-lg-flex">
         <a class="navbar-brand col-lg-3 me-0" href="#">Ваш аккаунт</a>
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-          <li class="nav-item"> <a class="p-2 text-dark">Список пользователей</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/users">Список пользователей</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/admins">Список администраторов</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Список лекарств</a> </li>
         </ul>
   
