--- a/src/main/resources/templates/admin/tables/admins-table.html
+++ b/src/main/resources/templates/admin/tables/admins-table.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head> 
-    <title>Users</title>
+    <title>Admins</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
@@ -21,7 +21,11 @@
                     <td th:text="${iter.index}+1"></td>
                     <td th:text="${admin.sername}"></td>
                     <td th:text="${admin.name}"></td>
+                    <td th:text="${admin.patronymic}"></td>
+                    <td th:text="${admin.gender}"></td>
+                    <td th:text="${admin.birthday}"></td>
                     <td th:text="${admin.email}"></td>
+                    <td><a href="/adminpage">Редактировать</a></td>
                 </tr>
             </tbody>
         </table>
