--- a/src/main/resources/templates/admin/user-edit.html
+++ b/src/main/resources/templates/admin/user-edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head> 
-    <title>Редактирование</title>
+    <title>Edit</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
@@ -20,15 +20,18 @@
             <input type="hidden" th:field="*{role}"/>
             
             <label for="sername">Фамилия: </label>
-            <input type="text" th:field="*{sername}" id="sername"/> <br>
+            <input type="text" th:field="*{sername}" id="sername" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
+            <div style="color:red" th:if="${#fields.hasErrors('sername')}" th:errors="*{sername}">Sername Error</div>
 
             <label for="name">Имя: </label>
-            <input type="text" th:field="*{name}" id="name"/> <br>
+            <input type="text" th:field="*{name}" id="name" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
+            <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
 
             <label for="patronymic">Отчество: </label>
-            <input type="text" th:field="*{patronymic}" id="patronymic"/> <br>
+            <input type="text" th:field="*{patronymic}" id="patronymic" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
 
             <div>
+                <label>Пол: </label>
                 <input type="radio" id="1" th:field="*{gender}" th:value="*{gender}" checked required/>
                 <label for="1" th:text="*{gender}"/>
                 <input type="radio" id="2" th:field="*{gender}" th:value="*{gender} == 'женщина' ? 'мужчина' : 'женщина'"/>
@@ -36,10 +39,12 @@
             </div>
 
             <label for="birthday">День рождения: </label>
-            <input type="text" th:field="*{birthday}" id="birthday"/> <br>
+            <input type="date" id="birthday" th:field="*{birthday}" min="1940-01-01" max="2020-01-01" /> <br>
+            <div style="color:red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Birthday Error</div>
 
             <label for="email">Почта: </label>
             <input type="email" th:field="*{email}" id="email"/> <br>
+            <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
 
             <div>
                 <label>Статус лечения: </label>
@@ -51,31 +56,14 @@
 
             <!--<input type="text" th:value="${user.sername}" name="sername" placeholder="Введите фамилию" class="form-control"><br>
             <input type="text" th:value="${user.name}" name="name" placeholder="Введите имя" class="form-control"><br>
-            <input type="text" th:value="${user.patronymic}" name="patronymic" placeholder="Введите отчество" class="form-control"><br>-->
-            <!-- гендер -->
-            <!--<div>
+            <input type="text" th:value="${user.patronymic}" name="patronymic" placeholder="Введите отчество" class="form-control"><br>
+            <div>
                 <input type="radio" id="1" name="gender" th:value="${user.gender}" checked required/>
                 <label for="1" th:text="${user.gender}"/>
                 <input type="radio" id="2" name="gender" th:value="${user.gender} == 'женщина' ? 'мужчина' : 'женщина'"/>
                 <label for="2" th:text="${user.gender} == 'женщина' ? 'мужчина' : 'женщина'"/>
-            </div>-->
-            <!--
-            <div th:switch="${user.gender}">
-                <div th:case="'мужчина'">
-                    <input type="radio" id="1" name="gender" value="мужчина" checked required/>
-                    <label for="1">мужчина</label>
-                    <input type="radio" id="2" name="gender" value="женщина"/>
-                    <label for="2">женщина</label>
-                </div>
-                <div th:case="'женщина'">
-                    <input type="radio" id="1" name="gender" value="мужчина" required/>
-                    <label for="1">мужчина</label>
-                    <input type="radio" id="2" name="gender" value="женщина" checked/>
-                    <label for="2">женщина</label>
-                </div>
             </div>
-            -->
-            <!--<input type="text" th:value="${user.birthday}" name="birthday" placeholder="Введите день рождения" class="form-control"><br>
+            <input type="text" th:value="${user.birthday}" name="birthday" placeholder="Введите день рождения" class="form-control"><br>
             <input type="email" th:value="${user.email}" name="email" placeholder="Введите почту" class="form-control"><br>
             <div>
                 <input type="radio" id="1" name="status" th:value="${user.status}" checked required/>
