--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -9,6 +9,7 @@
 
 </div>
  
+
 <div th:fragment="header-user-page">
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow-sm">
@@ -33,6 +34,7 @@
 
 </div>
 
+
 <div th:fragment="header-admin-page">
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow-sm">
@@ -42,7 +44,7 @@
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/users">Список пользователей</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/admins">Список администраторов</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark">Список лекарств</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/drugs">Список лекарств</a> </li>
         </ul>
   
         <form class="d-lg-flex col-lg-3 justify-content-lg-end" th:action="@{/logout}" th:method="POST">
