--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -21,7 +21,7 @@
           <li class="nav-item"> <a class="p-2 text-dark">Опросники</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Лекарства</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Статистика</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark">Личные данные</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/profile">Ваш профиль</a> </li>
         </ul>
   
         <form class="d-lg-flex col-lg-3 justify-content-lg-end" th:action="@{/logout}" th:method="POST">
@@ -45,6 +45,7 @@
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/users">Список пользователей</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/admins">Список администраторов</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/drugs">Список лекарств</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/profile">Ваш профиль</a> </li>
         </ul>
   
         <form class="d-lg-flex col-lg-3 justify-content-lg-end" th:action="@{/logout}" th:method="POST">
