--- a/src/main/resources/templates/admin/person-add.html
+++ b/src/main/resources/templates/admin/person-add.html
@@ -11,10 +11,13 @@
     <header th:insert="blocks/headers :: header-admin-page"></header>
 
     <div class="container mt-5 mb-5 text-center">
-        <h1>Регистрация нового пользователя</h1>
+        <!-- <h1>Регистрация нового пользователя</h1> -->
+        <h1 th:if="${flagEditUser}">Регистрация нового пользователя</h1>
+        <h1 th:unless="${flagEditUser}">Регистрация нового администратора</h1>
         <br>
 
-        <form th:action="@{/adminpage/user/add}" method="post" th:object="${person}" style="display: inline-block; width: 25rem;">  
+        <!-- th:action="${flagEditUser} ? @{/adminpage/person/add?role=ROLE_USER} : @{/adminpage/person/add?role=ROLE_ADMIN}" -->
+        <form th:action="@{/adminpage/person/add}" method="post" th:object="${person}" style="display: inline-block; width: 25rem;">  
             <input type="hidden" th:field="*{password}"/>
             <input type="hidden" th:field="*{role}"/>
             <input type="hidden" th:field="*{status}"/>
