--- a/src/main/resources/templates/admin/tables/admins-table.html
+++ b/src/main/resources/templates/admin/tables/admins-table.html
@@ -12,7 +12,7 @@
 
     <div class="container mt-5 mb-5">
         <h1>Список администраторов</h1><br>
-        <a href="/adminpage/admin/add" class="btn btn-success">Добавить</a><br><br>
+        <a href="/adminpage/person/add?role=ROLE_ADMIN" class="btn btn-success">Добавить</a><br><br>
 
         <table class="table table-bordered table-hover">
             <thead>
@@ -27,7 +27,7 @@
                     <td th:text="${admin.gender}"></td>
                     <td th:text="${admin.birthday}"></td>
                     <td th:text="${admin.email}"></td>
-                    <td><a href="/adminpage">Редактировать</a></td>
+                    <td><a th:href="'/adminpage/admin/' + ${admin.id} + '/edit'">Редактировать</a></td>
                 </tr>
             </tbody>
         </table>
