--- a/src/main/resources/templates/admin/tables/users-table.html
+++ b/src/main/resources/templates/admin/tables/users-table.html
@@ -12,7 +12,7 @@
 
     <div class="container mt-5 mb-5">
         <h1>Список пользователей</h1><br>
-        <a href="/adminpage/user/add" class="btn btn-success">Добавить</a><br><br>
+        <a href="/adminpage/person/add?role=ROLE_USER" class="btn btn-success">Добавить</a><br><br>
 
         <table class="table table-bordered table-hover">
             <thead>
