--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -18,7 +18,7 @@
         <a class="navbar-brand col-lg-3 me-0" href="#">Ваш аккаунт</a>
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
           <li class="nav-item"> <a class="p-2 text-dark" href="/">Главная страница</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark">Опросники</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires">Опросники</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Лекарства</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Статистика</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/profile">Ваш профиль</a> </li>
