--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -19,7 +19,7 @@
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
           <li class="nav-item"> <a class="p-2 text-dark" href="/">Главная страница</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires">Опросники</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark">Лекарства</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/drugs">Лекарства</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark">Статистика</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/profile">Ваш профиль</a> </li>
         </ul>
