add entities, tables, repositories and service for Questionnaires + add passing questionnaires with saving in entities + add page with results of all questionnaires

--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -19,8 +19,8 @@
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
           <li class="nav-item"> <a class="p-2 text-dark" href="/">Главная страница</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires">Опросники</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark" href="/drugs">Лекарства</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark">Статистика</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires/results">Результаты опросов</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/drugs">Ваши лекарства</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/profile">Ваш профиль</a> </li>
         </ul>
   
