--- a/src/main/resources/templates/user/questionnaires/questionnaires-list.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-list.html
@@ -5,24 +5,89 @@
     <title>Questionnaires</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-    <header th:insert="blocks/headers :: header-user-page"></header>
+  <header th:insert="blocks/headers :: header-user-page"></header>
 
-    <div class="container mt-5">
-        <h1 class="text-center"> Список опросников </h1>
-
-        <a href="/questionnaires/CAPS">1. CAPS</a><br><br>
-        <a href="/questionnaires/IESR">2. IES-R</a><br><br>
-        <a href="/questionnaires/BHS">3. BHS</a><br><br>
-        <a href="/questionnaires/TOP8">4. TOP-8</a><br><br>
-
-
+  <div class="container mt-5">
+    <h1 class="text-center"> Список опросников </h1><br>
+    
+    <div class="p-3 mb-2 bg-light text-dark">
+      <div class="row">
+        <div class="col-md-8" data-toggle="collapse" href="#collapseCAPS" role="button" aria-expanded="false" aria-controls="collapseCAPS">
+          <strong>1. Шкала для клинической диагностики ПТСР (Clinical-administered PTSD Scale - CAPS)</strong>
+        </div>
+        <div class="col-md-4 text-center"><a href="/questionnaires/CAPS" class="btn btn-primary w-50">Пройти</a></div>
+      </div>
     </div>
-   
-    <div th:insert="blocks/footer :: footer"></div>
+
+    <div class="collapse" id="collapseCAPS">
+      <div class="card card-body">
+        <p><u>Период прохождений:</u> раз в месяц</p>
+        <p>По результатам прохождения будут получены значения <b>частоты</b> и <b>интенсивности</b> проявления индивидуальных симптомов расстройства.</p>
+      </div>
+    </div><br>
+
+    <div class="p-3 mb-2 bg-light text-dark">
+      <div class="row">
+        <div class="col-md-8" data-toggle="collapse" href="#collapseIESR" role="button" aria-expanded="false" aria-controls="collapseIESR">
+          <strong>2. Шкала оценки влияния травматического события (Impact of Event Scale-R - IES-R)</strong>
+        </div>
+        <div class="col-md-4 text-center"><a href="/questionnaires/IESR" class="btn btn-primary w-50">Пройти</a></div>
+      </div>
+    </div>
+
+    <div class="collapse" id="collapseIESR">
+      <div class="card card-body">
+        <p><u>Период прохождений:</u> раз в неделю</p>
+        По результатам прохождения будут получены следующие результаты:<br>
+        <ol>
+          <li><b>Шкала «вторжение» (IN)</b> - позволяет выявить ночные кошмары, навязчивые мысли, связанные с травмирующим событием</li>
+          <li><b>Шкала «избегание» (AV)</b> - позволяет выявить симптомы избегания, включающие попытки смягчения или избегания переживаний, связанных с воздействием кризисного события</li>
+          <li><b>Шкала «физиологическое возбуждение» (AR)</b> - позволяет выявить злость и раздражительность, гипертрофированную реакцию испуга, психофизиологическое возбуждение, обусловленное воспоминаниями о событии, бессоницу. </li>
+        </ol>
+      </div>
+    </div><br>
+
+    <div class="p-3 mb-2 bg-light text-dark">
+      <div class="row">
+        <div class="col-md-8" data-toggle="collapse" href="#collapseBHS" role="button" aria-expanded="false" aria-controls="collapseBHS">
+          <strong>3. Шкала Безнадежности Бека (Beck Hopelessness Scale, BHS)</strong>
+        </div>
+        <div class="col-md-4 text-center"><a href="/questionnaires/BHS" class="btn btn-primary w-50">Пройти</a></div>
+      </div>
+    </div>
+
+    <div class="collapse" id="collapseBHS">
+      <div class="card card-body">
+        <p><u>Период прохождений:</u> раз в неделю</p>
+        <p>По результатам прохождения будет оценена выраженность негативного отношения по отношению к собственному будущему.</p>
+      </div>
+    </div><br>
+
+    <div class="p-3 mb-2 bg-light text-dark">
+      <div class="row">
+        <div class="col-md-8" data-toggle="collapse" href="#collapseTOP8" role="button" aria-expanded="false" aria-controls="collapseTOP8">
+          <strong>4. Опросник для оценки терапевтической динамики ПТСР «Treatment Outcome PTSD Scale» (TOP-8)</strong>
+        </div>
+        <div class="col-md-4 text-center"><a href="/questionnaires/TOP8" class="btn btn-primary w-50">Пройти</a></div>
+      </div>
+    </div>
+
+    <div class="collapse" id="collapseTOP8">
+      <div class="card card-body">
+        <p><u>Период прохождений:</u> раз в неделю</p>
+        <p>Помогает оценить, насколько мешали симптомы на прошлой неделе.</p>
+      </div>
+    </div><br>
+  </div>
+  
+  <div th:insert="blocks/footer :: footer"></div>
     
 </body>
 </html>
