added the ability to view answers from already written questionnaires of all types + combined functions for filling out new questionnaires

--- a/src/main/resources/templates/user/questionnaires/BHS.html
+++ b/src/main/resources/templates/user/questionnaires/BHS.html
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <h1 class="text-center"> Опросник BHS </h1>
 
-        <form th:action="@{/questionnaires/BHS}" th:object="${answers}" method="post">
+        <form th:action="@{/questionnaires/{name}(name='BHS')}" th:object="${answers}" method="post">
 
             <div th:each="question, iter1 : ${questions}">
                 <p th:text="${iter1.count} + '. ' + ${question}"/>
