--- a/src/main/resources/templates/user/questionnaires/IESR.html
+++ b/src/main/resources/templates/user/questionnaires/IESR.html
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <h1 class="text-center"> Опросник IES-R </h1>
 
-        <form th:action="@{/questionnaires/IESR}" th:object="${answers}" method="post">
+        <form th:action="@{/questionnaires/{name}(name='IESR')}" th:object="${answers}" method="post">
 
             <div th:each="question, iter1 : ${questions}">
                 <p th:text="${iter1.count} + '. ' + ${question}"/>
