add personal profile editing + improved front of person adding/editing form

--- a/src/main/resources/templates/admin/user-details.html
+++ b/src/main/resources/templates/admin/user-details.html
@@ -27,7 +27,7 @@
         <p th:text="'Почта: ' + ${user.email}"/>
         <p th:text="'Статус лечения: ' + ${user.status}"/>
 
-        <a data-remodal-target="modal-edit" class="btn btn-warning" th:href="'/adminpage/user/' + ${user.id} + '/edit'">Редактировать</a><br><br>
+        <a data-remodal-target="modal-edit" class="btn btn-secondary" th:href="'/adminpage/user/' + ${user.id} + '/edit'">Редактировать</a><br><br>
 
         <div class="remodal text-center" data-remodal-id="modal-edit">
             <button data-remodal-action="close" class="remodal-close"></button>
