--- a/src/main/resources/templates/admin/person-edit.html
+++ b/src/main/resources/templates/admin/person-edit.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    
     <header th:insert="blocks/headers :: header-admin-page"></header>
 
     <div class="container mt-5 mb-5 text-center">
@@ -15,47 +16,73 @@
         <h1 th:unless="${flagEditUser}">Редактирование данных другого администратора</h1>
         <br>
 
-        <form th:action="${flagEditUser} ? @{/adminpage/user/{id}(id=${person.id})} : @{/adminpage/admin/{id}(id=${person.id})}" method="post" th:object="${person}" style="display: inline-block; width: 25rem;">
+        <form th:action="${flagEditUser} ? @{/adminpage/user/{id}(id=${person.id})} : @{/adminpage/admin/{id}(id=${person.id})}" method="post" th:object="${person}" style="display: inline-block; width: 30rem;">
             <input type="hidden" th:field="*{password}"/>
             <input type="hidden" th:field="*{role}"/>
             
-            <label for="sername">Фамилия: </label>
-            <input type="text" th:field="*{sername}" id="sername" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
             <div style="color:red" th:if="${#fields.hasErrors('sername')}" th:errors="*{sername}">Sername Error</div>
-
-            <label for="name">Имя: </label>
-            <input type="text" th:field="*{name}" id="name" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
-            <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
-
-            <label for="patronymic">Отчество: </label>
-            <input type="text" th:field="*{patronymic}" id="patronymic" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> <br>
-
-            <div>
-                <label>Пол: </label>
-                <input type="radio" id="1" th:field="*{gender}" th:value="*{gender}" checked required/>
-                <label for="1" th:text="*{gender}"/>
-                <input type="radio" id="2" th:field="*{gender}" th:value="*{gender} == 'женщина' ? 'мужчина' : 'женщина'"/>
-                <label for="2" th:text="*{gender} == 'женщина' ? 'мужчина' : 'женщина'"/>
+            <div class="form-group row">
+                <label class="input-group-text">Фамилия</label>
+                <div class="col"> <input type="text" th:field="*{sername}" class="form-control" placeholder="Фамилия" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
             </div>
 
-            <label for="birthday">День рождения: </label>
-            <input type="date" id="birthday" th:field="*{birthday}" min="1940-01-01" max="2020-01-01" /> <br>
-            <div style="color:red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Birthday Error</div>
+            <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
+            <div class="form-group row">
+                <label class="input-group-text">Имя</label>
+                <div class="col"> <input type="text" th:field="*{name}" class="form-control" placeholder="Имя" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
+            </div>
 
-            <label for="email">Почта: </label>
-            <input type="email" th:field="*{email}" id="email"/> <br>
+            <div class="form-group row">
+                <label class="input-group-text">Отчество</label>
+                <div class="col"> <input type="text" th:field="*{patronymic}" class="form-control" placeholder="Отчество" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
+            </div>
+
+            <div style="color:red" th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">Gender Error</div> 
+            <div class="form-group row">
+                <label class="input-group-text">Пол</label>
+                <div class="col-md-1"></div>
+                <div class="form-check form-check-inline col-md-2">
+                    <input class="form-check-input" type="radio" id="1" th:field="*{gender}" value="женщина"/>
+                    <label class="form-check-label" for="1">женщина</label>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="form-check form-check-inline col-md-2">
+                    <input class="form-check-input" type="radio" id="2" th:field="*{gender}" value="мужчина"/>
+                    <label class="form-check-label" for="2">мужчина</label>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
+            <div style="color:red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Birthday Error</div> 
+            <div class="form-group row">
+                <label class="input-group-text">День рождения</label>
+                <div class="col"> <input type="date" th:field="*{birthday}" class="form-control" min="1940-01-01" max="2020-01-01"/> </div>
+            </div>
+            
             <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
+            <div class="form-group row">
+                <label class="input-group-text">Почта</label>
+                <div class="col"> <input type="email" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com"/> </div>
+            </div>
 
             <div th:if="${flagEditUser}">
-                <label>Статус лечения: </label>
-                <input type="radio" id="1" th:field="*{status}" th:value="*{status}" checked required/>
-                <label for="1" th:text="*{status}"/>
-                <input type="radio" id="2" th:field="*{status}" th:value="*{status} == 'В процессе' ? 'Завершено' : 'В процессе'"/>
-                <label for="2" th:text="*{status} == 'В процессе' ? 'Завершено' : 'В процессе'"/>
+                <div class="form-group row">
+                    <label class="input-group-text">Статус лечения</label>
+                    <div class="col-md-1"></div>
+                    <div class="form-check form-check-inline col-md-3">
+                        <input class="form-check-input" type="radio" id="1" th:field="*{status}" value="В процессе"/>
+                        <label class="form-check-label" for="1">В процессе</label>
+                    </div>
+                    <div class="form-check form-check-inline col-md-2">
+                        <input class="form-check-input" type="radio" id="2" th:field="*{status}" value="Завершено"/>
+                        <label class="form-check-label" for="2">Завершено</label>
+                    </div>
+                    <div class="col-md-1"></div>
+                </div>
             </div>
             <input th:unless="${flagEditUser}" type="hidden" th:field="*{status}"/>
-
             <br>
+            
             <button type="submit" class="btn btn-success">Обновить</button>
 
             <a th:if="${flagEditUser}" th:href="'/adminpage/user/' + ${person.id}" class="btn btn-secondary">Отмена</a>
@@ -66,6 +93,15 @@
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
+
 </body>
+
+<style>
+
+    .input-group-text {
+        width: 30%;
+    }
+
+</style>
 
 </html>
